--- a/index.html
+++ b/index.html
@@ -1,69 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy - Simple Photo Editor App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 0 20px;
-    }
-    h1, h2 {
-      color: #333;
-    }
-    p {
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style-type: disc;
-      margin-bottom: 20px;
-      padding-left: 20px;
-    }
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      margin-top: 50px;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Simple Photo Editor App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 1rem 0;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        h1, h2 {
+            color: #4CAF50;
+        }
+
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #4CAF50;
+            color: white;
+            position: relative;
+        }
+
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 15px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Privacy Policy - Simple Photo Editor App</h1>
-    <p>We respect your privacy and are committed to protecting it through our compliance with this Privacy Policy. This Privacy Policy describes:</p>
-    <ol>
-      <li>The types of information we may collect from you or that you may provide when you download, install, access, or use our Simple Photo Editor App ("App").</li>
-      <li>Our practices for collecting, using, maintaining, protecting, and disclosing that information.</li>
-    </ol>
-    <p>Please read this Privacy Policy carefully to understand our policies and practices regarding your information and how we will treat it. If you do not agree with our policies and practices, do not download, install, access, or use the App. By downloading, installing, accessing, or using the App, you agree to this Privacy Policy.</p>
-    <h2>1. Information We Collect</h2>
-    <p>The App does not collect any personal information from users, including children below 13 years of age.</p>
-    <h2>2. How We Use Your Information</h2>
-    <p>We do not use any personal information as the App does not collect such information. Non-personal information collected may be used to improve the App's functionality, optimize user experience, and for analytics purposes.</p>
-    <h2>3. Children's Privacy</h2>
-    <p>The App is intended for use by individuals of all ages, including children below 13 years of age. We do not knowingly collect personal information from children. If you are a parent or guardian and believe that your child has provided us with personal information, please contact us immediately. If we become aware that we have collected personal information from a child without parental consent, we will take steps to remove such information from our servers.</p>
-    <h2>4. Data Security</h2>
-    <p>We take reasonable measures to protect the information collected through the App from unauthorized access, disclosure, alteration, or destruction. However, please be aware that no method of transmission over the internet or electronic storage is 100% secure.</p>
-    <h2>5. Changes to Our Privacy Policy</h2>
-    <p>We reserve the right to amend this Privacy Policy at our discretion and at any time. Any changes to this Privacy Policy will be posted on this page, with an updated effective date indicated at the top of the page. Your continued use of the App after we make changes is deemed to be acceptance of those changes, so please check this Privacy Policy periodically for updates.</p>
-    <h2>6. Contact Us</h2>
-    <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:bibekmakaju@gmail.com">bibekmakaju@gmail.com</a>.</p>
-  </div>
-  <footer>
-    <p>By downloading, installing, accessing, or using the App, you consent to the collection and use of information in accordance with this Privacy Policy.</p>
-  </footer>
+    <header>
+        <h1>Privacy Policy</h1>
+        <p>Simple Photo Editor App</p>
+    </header>
+
+    <div class="container">
+        <h2>Introduction</h2>
+        <p>We respect your privacy and are committed to protecting it through our compliance with this Privacy Policy. This Privacy Policy describes:</p>
+        <ul>
+            <li>The types of information we may collect from you or that you may provide when you download, install, access, or use our Simple Photo Editor App ("App").</li>
+            <li>Our practices for collecting, using, maintaining, protecting, and disclosing that information.</li>
+        </ul>
+
+        <p>Please read this Privacy Policy carefully to understand our policies and practices regarding your information and how we will treat it. If you do not agree with our policies and practices, do not download, install, access, or use the App. By downloading, installing, accessing, or using the App, you agree to this Privacy Policy.</p>
+
+        <h2>1. Information We Collect</h2>
+        <p>The App does not collect any personal information from users, including children below 13 years of age.</p>
+
+        <h2>2. How We Use Your Information</h2>
+        <p>We do not use any personal information as the App does not collect such information. Non-personal information collected may be used to improve the App's functionality, optimize user experience, and for analytics purposes.</p>
+
+        <h2>3. Children's Privacy</h2>
+        <p>The App is intended for use by individuals of all ages, including children below 13 years of age. We do not knowingly collect personal information from children. If you are a parent or guardian and believe that your child has provided us with personal information, please contact us immediately. If we become aware that we have collected personal information from a child without parental consent, we will take steps to remove such information from our servers.</p>
+
+        <h2>4. Data Security</h2>
+        <p>We take reasonable measures to protect the information collected through the App from unauthorized access, disclosure, alteration, or destruction. However, please be aware that no method of transmission over the internet or electronic storage is 100% secure.</p>
+
+        <h2>5. Changes to Our Privacy Policy</h2>
+        <p>We reserve the right to amend this Privacy Policy at our discretion and at any time. Any changes to this Privacy Policy will be posted on this page, with an updated effective date indicated at the top of the page. Your continued use of the App after we make changes is deemed to be acceptance of those changes, so please check this Privacy Policy periodically for updates.</p>
+
+        <h2>6. Contact Us</h2>
+        <p>If you have any questions or concerns about this Privacy Policy, please contact us at <a href="mailto:bibekmakaju@gmail.com">bibekmakaju@gmail.com</a>.</p>
+
+        <p>By downloading, installing, accessing, or using the App, you consent to the collection and use of information in accordance with this Privacy Policy.</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Simple Photo Editor App. All rights reserved.</p>
+    </footer>
 </body>
 </html>
