--- a/index.html
+++ b/index.html
@@ -10,28 +10,36 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
+            background: linear-gradient(135deg, #4CAF50, #81C784);
             color: #333;
         }
 
         header {
-            background-color: #4CAF50;
+            background: linear-gradient(135deg, #2E7D32, #66BB6A);
             color: white;
             padding: 1rem 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .container {
             max-width: 800px;
             margin: 20px auto;
-            background: #fff;
+            background: white;
             padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
         }
 
-        h1, h2 {
-            color: #4CAF50;
+        h1 {
+            font-size: 2.5rem;
+        }
+
+        h2 {
+            color: #2E7D32;
+            font-size: 1.8rem;
+            border-bottom: 2px solid #81C784;
+            padding-bottom: 5px;
         }
 
         ul {
@@ -46,13 +54,15 @@
         footer {
             text-align: center;
             padding: 20px;
-            background: #4CAF50;
+            background: linear-gradient(135deg, #2E7D32, #388E3C);
             color: white;
             position: relative;
+            font-size: 1rem;
+            margin-top: 20px;
         }
 
         a {
-            color: #4CAF50;
+            color: #2E7D32;
             text-decoration: none;
         }
 
@@ -67,6 +77,14 @@
 
             .container {
                 padding: 15px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+
+            h2 {
+                font-size: 1.5rem;
             }
         }
     </style>
