--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #4CAF50, #81C784);
+            background: url('/mnt/data/cf2cda20-5fff-4200-b6da-5fa086fb0459.jpeg') no-repeat center center fixed;
+            background-size: cover;
             color: #333;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(76, 175, 80, 0.9), rgba(129, 199, 132, 0.9));
+            z-index: -1;
         }
 
         header {
@@ -25,7 +37,7 @@
         .container {
             max-width: 800px;
             margin: 20px auto;
-            background: white;
+            background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
