--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background: url('https://raw.githubusercontent.com/bibekmakaju07/bibekmakaju07.github.io/refs/heads/main/cf2cda20-5fff-4200-b6da-5fa086fb0459.jpeg') no-repeat center center fixed;
+            background: url('https://cloudinary.hbs.edu/hbsit/image/upload/s--TVkX_4JC--/f_auto,c_fill,h_375,w_750,/v20200101/405485CC24CDD4B99A62C0F87B02E356.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #333;
         }
