--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Simple Photo Editor App. All rights reserved.</p>
+        <p>&copy; 2024 Simple Photo Editor App. All rights reserved.<a href="about">About Me</a></p>
     </footer>
 </body>
 </html>
